prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ingress
  namespace: prod
spec:
  ingressClassName: nginx

  tls:
  - hosts:
    - prod.local
    secretName: local-tls

  rules:
  - host: prod.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: innodeploy-app-prod
            port:
              number: 3000
